--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,15 @@
-# Compiled class file
-*.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+package com.mycompany.mavenproject8;
+import javax.swing.JOptionPane;
+public class main {
+    public static void main(String[] args) {
+        long contador=0;
+        for(int i=0;i<100000000;i++)
+        {
+            if(i%2!=0)
+            {
+                contador =contador+i;
+            }
+        }
+        JOptionPane.showMessageDialog(null, contador);
+    }
+}
